Fixed the alignment of the footer link animation

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -32,14 +32,16 @@
             }
         }
         &:after {
-            content: "";
+            content: "";   
             transition: all 0.3s ease-in-out;
-            background-color: #fff;
-            width: 100%;
-            position: absolute;
-            height: 1px;
-            bottom: 0;
+            background-color: #fff;   
+            width: 100%;     
+            position: absolute;     
+            height: 1px;     
+            bottom: 0;     
+            left: 0;    
             transform: scaleX(0);
+            left: 0
         }
 
         &:before {
